modules/application/XX-fusionauth/service.tf
resource "aws_service_discovery_service" "discovery_service" {
  name = "fusionauth"
  dns_config {
    namespace_id = var.namespace_id
    dns_records {
      ttl  = 10
      type = "A"
    }
  }
}

resource "aws_ecs_service" "ecs_service" {
  name            = var.name
  task_definition = aws_ecs_task_definition.task_definition.arn

  deployment_circuit_breaker {
    enable   = true
    rollback = true
  }

  desired_count = var.runtime_environment == "production" || var.runtime_environment == "staging" ? 2 : 1

  cluster = var.cluster_id

  network_configuration {
    subnets         = var.network.private_subnet_ids
    security_groups = [aws_security_group.security_group.id]
  }

  service_registries {
    registry_arn = aws_service_discovery_service.discovery_service.arn
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.service_target_group.arn
    container_name   = "fusionauth"
    container_port   = 9011
  }

  lifecycle {
    ignore_changes = [
      capacity_provider_strategy
    ]
  }
}
