modules/application/XX-fusionauth/security-group.tf
resource "aws_security_group" "security_group" {
  depends_on = [var.network]
  name       = "${var.name}-ecs-svc-sg"
  vpc_id     = var.network.vpc_id
}

resource "aws_vpc_security_group_egress_rule" "base_egress_rule" {
  security_group_id = aws_security_group.security_group.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
}


resource "aws_vpc_security_group_ingress_rule" "application_load_balancer_ingress_rule" {
  security_group_id            = aws_security_group.security_group.id
  referenced_security_group_id = var.external_security_group_ids.alb
  from_port                    = 9011
  to_port                      = 9011
  ip_protocol                  = "tcp"
  lifecycle {
    ignore_changes = [
      referenced_security_group_id
    ]
  }
}

resource "aws_vpc_security_group_ingress_rule" "target_to_ingress_rules" {
  count = length(coalesce(var.allow_to_security_group_ids, []))

  security_group_id            = var.allow_to_security_group_ids[count.index]
  referenced_security_group_id = aws_security_group.security_group.id
  from_port                    = 8080
  to_port                      = 8080
  ip_protocol                  = "tcp"
  lifecycle {
    ignore_changes = [
      referenced_security_group_id
    ]
  }
}

resource "aws_vpc_security_group_ingress_rule" "allow_from_ingress_rules" {
  count = length(coalesce(var.allow_from_security_group_ids, []))

  security_group_id            = aws_security_group.security_group.id
  referenced_security_group_id = var.allow_from_security_group_ids[count.index]
  from_port                    = 9011
  to_port                      = 9011
  ip_protocol                  = "tcp"
}
